fix(plugins/plugin-client-common): regression in color contrast of Dropdown
apparently in theme selector; regression after bumping patternfly dep to @patternfly/react-core@4.181.1

--- a/plugins/plugin-client-common/web/scss/components/StatusStripe/StatusStripe.scss
+++ b/plugins/plugin-client-common/web/scss/components/StatusStripe/StatusStripe.scss
@@ -213,6 +213,7 @@ $z-index: var(--pf-global--ZIndex--xs);
       background-color: transparent;
     }
     @include DropdownToggle {
+      color: inherit;
       font-size: inherit;
     }
     @include DropdownItem {
